--- a/content/posts/我的一天.md
+++ b/content/posts/我的一天.md
@@ -3,6 +3,8 @@ title: "我的一天"           # 文章标题
 author: "taochesky"              # 文章作者
 showSocial: false
 date: 2022-01-09            # 文章编写日期
+thumbnailImage: /images/bg6.png
+thumbnailImagePosition: left
 ---
 贝尔在145年前的今天发明了电话， 袁世凯在110年前出任了总统，如果本拉登还活着，今天也许是他的65岁大寿。我只是条大一学生，没有想担任国家领袖，杰出的科学家或者优秀的恐怖分子的梦想，直到我被抓走前，我都在想，我到底该买一辆什么样的自行车。
 <!--more-->
@@ -21,3 +23,4 @@ date: 2022-01-09            # 文章编写日期
 对了，我今早要干嘛来着。哦，买俩车。
 
 还是睡觉吧。
+![bg-天狗](/images/bg6.png "bg6")
