--- a/content/posts/我的一天.md
+++ b/content/posts/我的一天.md
@@ -1,5 +1,5 @@
 ---
-title: "我的一天"           # 文章标题
+title: "我的一天-作者:taochesky"           # 文章标题
 author: "taochesky"              # 文章作者
 showSocial: false
 date: 2022-01-09            # 文章编写日期
