--- a/content/posts/我不爱吃屎.md
+++ b/content/posts/我不爱吃屎.md
@@ -1,5 +1,5 @@
 ---
-title: "我不爱吃屎"           # 文章标题
+title: "我不爱吃屎-作者:taochesky"           # 文章标题
 author: "taochesky"              # 文章作者
 showSocial: false
 date: 2022-01-10            # 文章编写日期
